<resources>
    <string name="app_name">Best Trip</string>

    <!-- action -->
    <string name="action_edit">Edit</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_done">Done</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_accept">Accept</string>

    <!--Splash-->
    <string name="welcome">Welcome</string>

    <!-- login -->
    <string name="login_phone_number">Enter Phone Number</string>
    <string name="login_nin">Enter NIN</string>
    <string name="login_password">Enter Password</string>
    <string name="login_confirm_password">Enter Confirm Password</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_driver">Driver</string>
    <string name="login_user">User</string>
    <string name="login_motorbike_taxi_sign_up">Motorbike Taxi Sign Up</string>
    <string name="login_forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>

    <string name="login_please_input_phone_number">Please Input Phone Number</string>
    <string name="login_please_input_password">Please Input Password</string>
    <string name="login_please_input_confirm_password">Please Input Confirm Password</string>
    <string name="login_please_input_nin">Please Input NIN</string>
    <string name="login_nin_invalid">NIN invalid</string>
    <string name="login_failed">The username and password aren\'t not correct</string>

    <string name="warning_logout">Are you sure you want to logout?</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!--Home-->
    <string name="home">Home</string>
    <string name="home_do_you_want_to_logout">Do you want to logout?</string>

    <!--Profile-->
    <string name="profile">Profile</string>
    <string name="profile_male">Male</string>
    <string name="profile_female">Female</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_enter_first_name">Enter First Name</string>
    <string name="profile_please_enter_first_name">Please Enter First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_enter_last_name">Enter Last Name</string>
    <string name="profile_please_enter_last_name">Please Enter Last Name</string>
    <string name="profile_address">Address</string>
    <string name="profile_enter_address">Enter Address</string>
    <string name="profile_please_enter_address">Please Enter Address</string>
    <string name="profile_please_select_gender">Please Select Gender</string>
    <string name="profile_gender">Gender</string>

    <!--Map-->
    <string name="maps_enter_destination">Enter destination</string>
    <string name="maps_enter_your_location">Enter your location</string>
    <string name="maps_book">Book</string>
    <string name="maps_search">Search</string>
    <string name="maps_your_location">Your location</string>

    <!--Staff-->
    <string name="staff">Staff</string>
    <string name="staff_update_profile">Update Profile</string>
    <string name="name">Name: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="address">Address: </string>
    <string name="gender">Gender: </string>
    <string name="all_booking">All Booking</string>
    <string name="default_distance">0 km</string>
    <string name="default_clock">0 mins</string>

    <!--Manage-->
    <string name="manage_staff">Manage Staff</string>
    <string name="detail_manage_staff">Detail Manage Staff</string>
    <string name="manage_set_up_price">Set Up Price</string>
</resources>
