<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:padding="@dimen/common_16dp">

    <com.matas.caroperatingsystem.widget.AppEditText
        android:id="@+id/edt_phone"
        style="@style/EditText"
        android:layout_width="0dp"
        android:hint="@string/login_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.matas.caroperatingsystem.widget.AppEditText
        android:id="@+id/edt_pass_word"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/common_16dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/edt_phone"
        app:layout_constraintStart_toStartOf="@id/edt_phone"
        app:layout_constraintTop_toBottomOf="@id/edt_phone" />

    <com.matas.caroperatingsystem.widget.AppButton
        android:id="@+id/btn_login"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/common_16dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/btn_user_sign_up"
        app:layout_constraintEnd_toEndOf="@id/edt_phone"
        app:layout_constraintStart_toStartOf="@id/edt_phone" />

    <com.matas.caroperatingsystem.widget.AppButton
        android:id="@+id/btn_user_sign_up"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/common_16dp"
        android:text="@string/login_user_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/btn_biker"
        app:layout_constraintEnd_toEndOf="@id/edt_phone"
        app:layout_constraintStart_toStartOf="@id/edt_phone" />

    <com.matas.caroperatingsystem.widget.AppButton
        android:id="@+id/btn_biker"
        style="@style/Button"
        android:layout_width="0dp"
        android:text="@string/login_motorbike_taxi_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edt_phone"
        app:layout_constraintStart_toStartOf="@id/edt_phone" />
</android.support.constraint.ConstraintLayout>
