<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.matas.caroperatingsystem.widget.AppTextView
            android:id="@+id/tv_best_trip"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_90"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_size_32sp"
            app:layout_constraintDimensionRatio="7:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_95"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_best_trip">

            <com.matas.caroperatingsystem.widget.AppTextView
                android:id="@+id/tv_login"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/color_white_gray_selected" />

            <com.matas.caroperatingsystem.widget.AppTextView
                android:id="@+id/tv_user_sign_up"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_user"
                android:textColor="@color/color_white_gray_selected" />

            <com.matas.caroperatingsystem.widget.AppTextView
                android:id="@+id/tv_driver_sign_up"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_driver"
                android:textColor="@color/color_white_gray_selected" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_header" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
