<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.matas.caroperatingsystem.widget.topbar.AppTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.user.UserActivity" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_16dp"
            android:background="@drawable/bg_solid_white_stroke_separator_radius_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imv_your_location"
                android:layout_width="@dimen/common_32dp"
                android:layout_height="@dimen/common_32dp"
                android:layout_marginStart="@dimen/common_10dp"
                android:layout_marginTop="@dimen/common_20dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_your_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.matas.caroperatingsystem.widget.AppEditText
                android:id="@+id/edt_your_location"
                style="@style/EditText"
                android:layout_width="0dp"
                android:background="@android:color/transparent"
                android:hint="@string/maps_enter_your_location"
                android:padding="@dimen/common_10dp"
                android:text="@string/maps_your_location"
                app:layout_constraintBottom_toBottomOf="@id/imv_your_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imv_your_location"
                app:layout_constraintTop_toTopOf="@id/imv_your_location" />

            <View
                android:id="@+id/view_empty"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/common_10dp"
                android:background="@color/gray_blur_transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imv_your_location" />

            <ImageView
                android:id="@+id/imv_destination"
                android:layout_width="@dimen/common_32dp"
                android:layout_height="@dimen/common_32dp"
                android:layout_marginStart="@dimen/common_10dp"
                android:layout_marginTop="@dimen/common_20dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_destination"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_empty" />

            <com.matas.caroperatingsystem.widget.AppEditText
                android:id="@+id/edt_destination"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/maps_enter_destination"
                android:padding="@dimen/common_10dp"
                app:layout_constraintBottom_toBottomOf="@id/imv_destination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imv_destination"
                app:layout_constraintTop_toTopOf="@id/imv_destination" />

            <com.matas.caroperatingsystem.widget.AppButton
                android:id="@+id/btn_book"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_margin="@dimen/common_10dp"
                android:background="@drawable/bg_solid_orange_radius_8dp"
                android:text="@string/maps_search"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imv_destination" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_16dp"
            android:background="@drawable/bg_solid_white_stroke_separator_radius_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.matas.caroperatingsystem.widget.AppTextView
                android:id="@+id/tv_distance"
                style="@style/TextView"
                android:drawablePadding="@dimen/common_10dp"
                android:drawableStart="@drawable/ic_distance"
                android:padding="@dimen/common_10dp"
                android:text="0 km"
                app:layout_constraintEnd_toStartOf="@+id/tv_clock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.matas.caroperatingsystem.widget.AppTextView
                android:id="@+id/tv_clock"
                style="@style/TextView"
                android:drawablePadding="@dimen/common_10dp"
                android:drawableStart="@drawable/ic_clock"
                android:padding="@dimen/common_10dp"
                android:text="0 mins"
                app:layout_constraintBottom_toBottomOf="@id/tv_distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_distance"
                app:layout_constraintTop_toTopOf="@id/tv_distance" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>